# ray_tracking_opengl

./: .editorconfig  CMakeLists.txt
src/: main.cpp  ray_tracking.comp  shader.cpp  shader.h  texture.cpp  texture.h
